--- a/app-secret.yaml
+++ b/app-secret.yaml
@@ -1,9 +1,9 @@
-apiVersion: V1
+apiVersion: v1
 kind: Secret
 metadata:
   name: app-secret
+  namespace: 
 type: Opaque
 data:
   db-pass: dnByb2RicGFzcw==
   rmq-pass: Z3Vlc3Q=
-
